--- a/isso/isso.cfg
+++ b/isso/isso.cfg
@@ -5,7 +5,7 @@
 
 # file location to the SQLite3 database, highly recommended to change this
 # location to a non-temporary location!
-dbpath = /tmp/comments.db
+dbpath = /db/comments.db
 
 # required to dispatch multiple websites, not used otherwise.
 name =
@@ -25,6 +25,9 @@ name =
 #     https://example.tld/
 #
 host =
+    http://localhost:9000/
+    http://www.chronopin.com/
+    https://www.chronopin.com/
 
 # time range that allows users to edit/remove their own comments.
 # It supports years, weeks, days, hours, minutes, seconds.
